# gad-dev

./: .gitignore  Cargo.toml
godot/: godot_asset_browser.gdextension  icon.svg.import  project.godot
godot/addons/godot_asset_browser/: godot_asset_browser.gdextension
rust/: Cargo.toml  build.rs  build_and_copy.sh
rust/src/: asset_library_extension.rs  lib.rs
rust/src/asset_library/: asset.rs  asset_manager.rs  config_manager.rs  mod.rs
rust/src/gui/: asset_library_gui.rs  asset_library_ui.rs  mod.rs
rust/src/ui/: asset_library_ui.rs  mod.rs
