[package]
name = "godot_asset_browser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
reqwest = { version = "0.12.7", features = ["json"] }

[build-dependencies]
# Add any build dependencies here if needed